# BlazeSeq

./: .gitattributes  .gitignore  AGENTS.md  Benchmarking.md  CHANGELOG.md  CONSTS.mojo  LICENSE  QC.mojo  README.md  SeqIO_parser.py  __init__.mojo  archeticture.md  bed_enhancements.md  benchmark_results_batch_vs_paraseq.json  benchmark_results_batch_vs_paraseq.md  benchmark_results_gzip_single.json  benchmark_results_gzip_single.md  blazeseq_cli  buff.mojo  buffered_reader.mojo  cli.mojo  example_device.mojo  fast_parser.mojo  fastq_collection.mojo  fastq_parser  fastq_parser.mojo  fastq_parser.py  fastq_record.mojo  fastq_writer.mojo  file_stream.mojo  fnv1a.mojo  gff_cleanup_plan.md  gff_enhancment.md  helpers.mojo  kgen.trace.json.time-events.txt  kgen.trace.json.time-trace  main  main.mojo  mmap.mojo  modo.yaml  (+18 more)
.VSCodeCounter/2024-11-28_00-03-10/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-12-23_01-03-52/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.claude/: .gitignore
.cursor/rules/: general_behavior_rules.mdc  mojo.mdc
.github/: PULL_REQUEST_TEMPLATE.md  package.yml  run-tests.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
MojoFastTrim/: CONSTS.mojo  __init__.mojo  analyzers.mojo  fast_parser.mojo  fastq_parser.mojo  fastq_record.mojo  fastq_writer.mojo  helpers.mojo  iostream.mojo  main.mojo  parser.mojo  record.mojo  record_coord.mojo  stats.mojo  writer.mojo
assets/: report_template.html  style.css
benchmark/: .gitignore  README.md  SeqIO_parser.py  benchmark_all_parser_modes.mojo  benchmark_coord_parser.mojo  benchmark_fast_parser.mojo  benchmark_fastq_parser.mojo  benchmark_record_parser_allvalid.mojo  benchmark_record_parser_novalid.mojo  benchmark_record_parser_qu_valid.mojo  biofast_benchmark.mojo  fast_parser.mojo  generate_synthetic_fastq.mojo  install_toolchains.sh  run_benchmarks.sh  run_blazeseq.mojo  run_fastx.jl  synthetic_2gb_ref_parser.mojo  throughput_benchmark.mojo
benchmark/fastq-parser/needletail_runner/: Cargo.toml
benchmark/fastq-parser/paraseq_runner/: Cargo.toml
benchmark/fastq-parser/paraseq_runner/src/: main.rs
benchmark/fastq-parser/seq_io_recordset_runner/: Cargo.toml
benchmark/fastq-parser/seq_io_recordset_runner/src/: main.rs
benchmark/fastq-parser/seq_io_runner/: Cargo.toml
benchmark/fastq-parser/seq_io_runner/src/: gzip_main.rs  main.rs
benchmark/needletail_benchmark/: Cargo.toml
benchmark/needletail_benchmark/benches/: benchmark.rs
benchmark/needletail_benchmark/src/: lib.rs  main.rs
blazeseq/: CONSTS.mojo  __init__.mojo  ascii_string.mojo  byte_string.mojo  cli  cli.mojo  config.mojo  device_record.mojo  errors.mojo  gc_model.mojo  helpers.mojo  html_maker.mojo  iostream.mojo  main.mojo  new_iostream.mojo  parser.mojo  quality_schema.mojo  readers.mojo  record.mojo  record_batch.mojo  spmc.mojo  stats.mojo  utils.mojo  writers.mojo  zlib.mojo
data/: fastq_test.fastq  performance.md  summary.txt
docs/: .gitignore  IMPLEMENTATION_GUIDE.md  PARALLEL_ARCHITECTURE.md  RAPIDGZIP_ARCHITECTURE.md  README.md  TODO.md
docs/site/: go.mod  (+5 more)
examples/: biofast_example.mojo  example_basic_io.mojo  example_device.mojo  example_fastq_writer.mojo  example_parser.mojo
python/: .gitignore  MANIFEST.in  README.md  blazeseq_parser.mojo  pyproject.toml
python/blazeseq/: __init__.py  __init__.pyi  _loader.py
python/blazeseq/_extension/: .gitkeep
python/blazeseq/mojopkg/: README.md
test/: generate_data.mojo  test_coord_parser.mojo  test_device_record.mojo  test_fastq_parsers.mojo  test_fastq_record.mojo  test_helpers.mojo  test_iostream.mojo  test_record_parser.mojo  tests.mojo
tests/: generate_data.mojo  test_coord_parser.mojo  test_delimited.mojo  test_device_record.mojo  test_error_context.mojo  test_fasta_writer.mojo  test_fastq_integration.mojo  test_fastq_parser_correctness.mojo  test_fastq_record.mojo  test_iostream.mojo  test_kernels.mojo  test_line_iterator.mojo  test_parser.mojo  test_python_bindings.py  test_rapidgzip_reader.mojo  test_readers.mojo  test_record_batch.mojo  test_record_parser.mojo  test_spmc_queue.mojo  test_writers.mojo
(+179 files in other folders)
