[package]
name = "rust_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
needletail = "0.5.1"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false

[lib]
name = "rust_parser"
path = "src/lib.rs"
