[package]
name = "paraseq_runner"
version = "0.1.0"
edition = "2021"
description = "FASTQ parser benchmark runner using paraseq record sets"

[[bin]]
name = "paraseq_runner"
path = "src/main.rs"

[dependencies]
paraseq = "=0.4.5"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

