[package]
name = "seq_io_runner"
version = "0.1.0"
edition = "2021"
description = "FASTQ parse benchmark runner using seq_io"

[[bin]]
name = "seq_io_runner"
path = "src/main.rs"

[[bin]]
name = "seq_io_gzip_runner"
path = "src/gzip_main.rs"

[dependencies]
seq_io = "0.3"
flate2 = "1.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
